next
  [Fixed]
  - A bar will now be notified when a different monitor has been
    selected.

  [Added]
  - Exemplary lemonbar script: Workspaces can be suffixed.

Milestone 3  2016-01-03
  [Fixed]
  - Critical: Fix "use after free" when a client terminates or unmaps.
  - More robust against nonsensical data received from the IPC client.
    In other words: Added various out-of-bounds checks.
  - Fix focus issues with suckless tabbed after changing workspaces or
    monitors.

  [Changed]
  - On startup, the pointer is now warped to the selected monitor.
  - DestroyNotify events are now ignored.
  - We now always unmap windows on UnmapNotify as suggested by ICCCM.
  - Refuse to switch workspace or monitor if it's already selected.
  - The number of available save slots has been reduced to eight.

  [Added]
  - Support for ICCCM input focus models and WM_TAKE_FOCUS.
  - Support for ICCCM WM_STATE.
  - IPC calls:
    - Center currently selected floating client
    - Maximize currently selected floating client
    - Collect floating clients, i.e. fit them to current monitor
  - Currently selected monitor index is published in the root window
    property _KATRIA_STATE and will be displayed in lemonbar.
  - Occupied save slots are published in t he root window property
    _KATRIA_STATE and will be displayed in lemonbar.

Milestone 2  2016-01-01
  [Fixed]
  - Moving and resizing works when pointer over decorations.
  - Floating windows don't appear on the wrong monitor after XRandR
    changes.
  - Fix focus issues: Kick last remains of sloppy focus.
  - Fullscreen mode now works properly.
  - Duplicate monitors (i.e., monitors with the same x, y offset and
    same width, height) are now ignored. These areas act like they are
    one single monitor.
  - Fix: When clients spawn on an invisible workspace, they are now
    focus-able.

  [Changed]
  - Motif theme is "lighter".
  - Workspace indexes begin at 0, default workspace is 1.
  - Selecting monitors wraps around.